A GSB is sent to the main thread before transfering the fling curve.

When blocking or blockingAndPassive wheel event listeners exists, the
fling curve gets transferred to the main thread on first tick of the
animation. This cl makes sure that a GSB is sent to the main thread
before transferring the curve.

Bug: 764466
Change-Id: Ibd4d03bef8ede9ff76d391b658130eab87794981
Reviewed-on: https://chromium-review.googlesource.com/663240
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501709}
Former-commit-id: 209cb7067d41c5f1d1ffbe384553f0411a11d09b